# Team108

./: readme.md
UI/: LeftTabWidget.py
code/: readme.md  代码展示用ppt.pptx
code/App_development/: Main.py
code/my_total/: CMakeList.txt  package.xml
code/my_total/launch/: shopping_201.launch
code/my_total/msg/: BoundingBox.msg
code/my_total/rviz/: nav_mani.rviz  slam_mani.rviz
code/my_total/src/: exception.c  exception.h  shopping.cpp
code/my_vel_package/: CMakeList.txt  package.xml  readme.md
code/my_vel_package/launch/: my_vel.launch
code/my_vel_package/src/: exception.c  exception.h  vel_ctrl.cpp
code/robot_sim_demo/: package.xml
code/robot_sim_demo/devel/: _setup_util.py  local_setup.sh
code/test/: test_Speak.cpp  test_check_front_obstacle.cpp  test_find_object.cpp  test_find_path.cpp  test_speak&talk.cpp
code/waterplus_map_tools/launch/: add_waypoint.launch  wpb_home_nav_test.launch
code/wpb_home_apps/src/: path_plan.cpp
code/wpb_home_bringup/launch/: kinect_test.launch
code/wpb_home_tutorials/launch/: gmapping.launch  hector_mapping.launch  nav.launch  voice_cmd.launch
code/xfyun_kinetic/: CMakeLists.txt
code/导航模块/: readme.md
doc/: .~R-测试报告.doc  PDSR-项目总结报告-108.doc  PDSR-项目总结报告.doc  SDD-软件设计说明108.doc  SDD-软件设计说明108.docx  SDP-项目开发计划.doc  SRS-软件需求规格说明书108.doc  STR-测试报告.doc  ~$R-测试报告.doc  第三次展示代码演示.pptx  项目开发计划.doc
robot_sim_demo/: CMakeLists.txt
robot_sim_demo/devel/: .catkin
robot_sim_demo/launch/: robot_spawn.launch
scripts/: setup.sh
演示/: readme.md
脚本文件/: cruise.sh  free_run.sh  set_map.sh  voice_ctrl.sh
(+30 files in other folders)
